[project]
name = "agentsentry"
version = "0.2.0"
description = "AgentSentry: supervised LLM agent behavior firewall prototype"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "httpx",
    "pydantic",
    "pyyaml",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "jsonschema>=4.23",
    "playwright",
    "pytest",
]
native-agentdojo = [
    "agentdojo==0.1.35",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
